# video-vlm-eval

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  base-requirements.txt  pyproject.toml  run-mypy
sagemaker/: README.md  inference.Dockerfile  run_inference_sagemaker.py
scripts/: convert_gif_to_mp4.py  ego_schema_hay_needle.py  fill_ego_schema_subset_answers.py  measure_time_gpu_mem.py  prepare_ego_schema_kaggle_submission.py  prepare_mlvu_test_mc_submission.py  run_eval.py  run_eval_video_chatgpt.py  run_eval_zero_shot_qa.py  run_inference.py  run_inference_zero_shot_qa.py  run_openai_eval.py  submit_kaggle_ego_schema.py
scripts/evaluate/: eval_activitynet_qa.py
scripts/inference/: run_inference_activitynet_qa.py
video_vlm_eval/: __init__.py
video_vlm_eval/dataset/: __init__.py  activitynet_qa.py  egoschema.py  mlvu.py  movie_chat_1k.py  msrvtt_qa.py  msvd_qa.py  tgif_qa.py  video_chatgpt.py  video_mme.py
video_vlm_eval/model/: __init__.py  koala.py  prismatic.py  tarsier.py  utils.py  videollama2.py
video_vlm_eval/preprocessor/: prismatic.py
video_vlm_eval/task/: __init__.py  egoschema.py  mlvu.py  movie_chat_1k.py  video_chatgpt.py  video_mme.py
