[tool.poetry]
name = "video-vlm-eval"
version = "0.1.0"
description = ""
authors = ["Peter Yu <2057325+yukw777@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "video_vlm_eval" }]

[tool.poetry.dependencies]
python = "^3.10"
jsonargparse = "^4.29.0"
torch = {version = "^2.3.1+cu121", source = "pytorch-cu121"}
prismatic = {git = "git@github.com:yukw777/prismatic-dev.git", rev = "video-chatgpt"}
decord = "^0.6.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
ipython = "^8.25.0"
ruff = "^0.4.8"
mypy = "^1.10.0"


[[tool.poetry.source]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
