[tool.poetry]
name = "video-vlm-eval"
version = "0.1.0"
description = ""
authors = ["Peter Yu <2057325+yukw777@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "video_vlm_eval" }]

[tool.poetry.dependencies]
python = "^3.10"
jsonargparse = "^4.29.0"
torch = "~2.4.0"
# set prismatic to optional for easier docker build cache management
prismatic = { git = "git@github.com:yukw777/prismatic-dev.git", rev = "716ddd56c85a4bf28652f054309bb81c7fba460e", optional = true }
decord = "^0.6.0"
openai = "^1.33.0"
tenacity = "^8.3.0"
kaggle = { version = "^1.6.14", optional = true }
sagemaker = "^2.224.1"
flash-attn = { version = "^2.5.9.post1", optional = true }
setuptools = "<70.0.0"
koala = { git = "git@github.com:yukw777/Koala-video-llm.git", rev = "3b8e82c0ff79087bda31d3b3aa397da7e3a32c6d" }


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
ipython = "^8.25.0"
ruff = "^0.4.8"
mypy = "^1.10.0"


[[tool.poetry.source]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.poetry.extras]
prismatic = ["prismatic"]
kaggle = ["kaggle"]
flash-attn = ["flash-attn"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint.isort]
# wandb by default creates a directory called "wandb"
# which confuses isort, causing it to classify wandb
# as a first-party library.
known-third-party = ["wandb"]

[tool.mypy]
ignore_missing_imports = true
