[tool.poetry]
name = "video-vlm-eval"
version = "0.1.0"
description = ""
authors = ["Peter Yu <2057325+yukw777@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "video_vlm_eval" }]

[tool.poetry.dependencies]
python = "^3.10"
jsonargparse = "^4.29.0"
torch = "~2.4.0"
# set prismatic to optional for easier docker build cache management
prismatic = { git = "git@github.com:yukw777/prismatic-dev.git", rev = "0bd568851f8b3a0e0ac1723fbf424af2bed1bf41", optional = true }
decord = "^0.6.0"
openai = "^1.33.0"
tenacity = "^8.3.0"
kaggle = { version = "^1.6.14", optional = true }
sagemaker = { path = "vendor/sagemaker-2.226.2.dev0.tar.gz", optional = true }
flash-attn = { version = "^2.5.9.post1", optional = true }
setuptools = "<70.0.0"
tarsier = { git = "git@github.com:yukw777/tarsier.git", rev = "92a195326138c834002faf5385edec4ba4906067" }
videollama2 = { git = "git@github.com:yukw777/VideoLLaMA2.git", rev = "4c8be00b9906d64e9870993fc462ade87cbeaef9" }
nest-asyncio = { version = "^1.6.0", optional = true }
datasets = "^3.5.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
ipython = "^8.25.0"
ruff = "^0.11.4"
mypy = "^1.10.0"


[[tool.poetry.source]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.poetry.extras]
prismatic = ["prismatic"]
kaggle = ["kaggle"]
flash-attn = ["flash-attn"]
sagemaker = ["sagemaker", "nest-asyncio"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint.isort]
# wandb by default creates a directory called "wandb"
# which confuses isort, causing it to classify wandb
# as a first-party library.
known-third-party = ["wandb"]

[tool.mypy]
ignore_missing_imports = true
